# toy-fuzzer-analyzer

./: Cargo.toml  README.md
b3/0x001f0aa5da15585e5b2305dbab2bac425ea71007/: IpsxToken.bin-runtime
b3/0x006bea43baa3f7a6f765f14f10a1a1b08334ef45/: StoxSmartToken.bin-runtime  StoxSmartTokenSale.abi  StoxSmartTokenSale.bin-runtime
b3/0x007ac2f589eb9d4fe1cea9f46b5f4f52dab73dd4/: SKWToken.bin-runtime
b3/0x018d7d179350f1bb9853d04982820e37cce13a92/: INXToken.bin-runtime
b3/0x01eacc3ae59ee7fbbc191d63e8e1ccfdac11628c/: FairWin.bin-runtime
b3/0x01f2acf2914860331c1cb1a9acecda7475e06af8/: MESH.bin-runtime
b3/0x029606e5ec44cad1346d6a1273a53b971fa93ad6/: EMPRO.bin-runtime
b3/0x035771ef2b2af2f1f3357443f1d99e3bbfc68884/: KAJINO.bin-runtime
b3/0x039f5050de4908f9b5ddf40a4f3aa3f329086387/: EthernetCash.bin-runtime
b3/0x041fe8df8b4aaa868941eb877952f17babe57da5/: NYBCoin.bin-runtime
b3/0x048717ea892f23fb0126f00640e2b18072efd9d2/: Etheroll.bin-runtime
b3/0x04de23e912cec433eabf3260ecc71cfd1f9d328f/: BITCOINIMPROVE.bin-runtime
b3/0x05cf67329a262818e67c080e9d511a34d36152c0/: MultiSigWallet.bin-runtime
b3/0x06012c8cf97bead5deae237070f9587f8e7a266d/: KittyCore.bin-runtime
b3/0x06404399e748cd83f25ab163711f9f4d61cfd0e6/: FunkeyCoin.bin-runtime
b3/0x0651842ee1f973367138cd512709d81bf8a62217/: TrackChain.bin-runtime
b3/0x0778cc2e8bbad3d483e82371606d100cc8604522/: MintableToken.bin-runtime  (+2 more)
crates/ityfuzz-analyzer/: Cargo.toml
crates/ityfuzz-analyzer/src/: main.rs  plot.rs  run.rs  types.rs
src/: #main.rs#  compile.rs  main.rs  plot.rs  run.rs  types.rs
(+517 files in other folders)
