[package]
name = "fuzzer_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"
csv = "1.3"
plotters = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3.2"
chrono = "0.4"
subprocess = "0.2.9"
eyre = "0.6"
color-eyre = "0.6"
clap = { version = "4.5.38", features = ["derive"] }
